--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "express": "^4.15.3",
     "express-sanitizer": "^1.0.2",
     "method-override": "^2.3.9",
+    "moment": "^2.18.1",
+    "moment-timezone": "^0.5.13",
     "mongoose": "^4.10.8",
     "sanitizer": "^0.1.3"
   }
